[project]
name = "your_project_name"
description = "Short description of your project"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }  # or BSD-3-Clause, Apache-2.0, etc.
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "requests",
]

[project.urls]
homepage = "https://github.com/yourusername/yourproject"
documentation = "https://github.com/yourusername/yourproject"
source_code = "https://github.com/yourusername/yourproject"
bug_tracker = "https://github.com/yourusername/yourproject/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff",
    "setuptools_scm",
    "pre-commit",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["your_project_name*"]
exclude = ["tests*", "docs*"]

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = false

[tool.mypy]
strict = true
exclude = "^docs/.*"

[tool.pytest.ini_options]
addopts = "--cov=your_project_name"

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
